fix(docker): removed env options from dockerfile